Cambios GUI BranchMVC

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Progra1POO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.poi-4.1.0.jar=D:\\JAVA_LIBS\\poi-4.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.poi-4.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
