--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.jar=${dist.dir}/Progra1POO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gembox-spreadsheet.jar=C:\\Users\\Andres Aguilar Moya\\Desktop\\GBS4j11v1131\\gembox-spreadsheet.jar
 file.reference.poi-4.1.0.jar=D:\\JAVA_LIBS\\poi-4.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.poi-4.1.0.jar}
+    ${file.reference.poi-4.1.0.jar}:\
+    ${file.reference.gembox-spreadsheet.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
