--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ endorsed.classpath=
 excludes=
 file.reference.gembox-spreadsheet.jar=C:\\Users\\Andres Aguilar Moya\\Desktop\\GBS4j11v1131\\gembox-spreadsheet.jar
 file.reference.gembox-spreadsheet.jar-1=C:\\Users\\fabia\\Desktop\\Spreadsheet\\gembox-spreadsheet.jar
+file.reference.gembox-spreadsheet.jar-2=C:\\Users\\Admin\\Desktop\\spreadsheet\\gembox-spreadsheet.jar
 file.reference.poi-4.1.0.jar=D:\\JAVA_LIBS\\poi-4.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.poi-4.1.0.jar}:\
     ${file.reference.gembox-spreadsheet.jar}:\
-    ${file.reference.gembox-spreadsheet.jar-1}
+    ${file.reference.gembox-spreadsheet.jar-1}:\
+    ${file.reference.gembox-spreadsheet.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
