--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,17 +36,16 @@ excludes=
 file.reference.gembox-spreadsheet.jar=C:\\Users\\Andres Aguilar Moya\\Desktop\\GBS4j11v1131\\gembox-spreadsheet.jar
 file.reference.gembox-spreadsheet.jar-1=C:\\Users\\fabia\\Desktop\\Spreadsheet\\gembox-spreadsheet.jar
 file.reference.javax.mail.jar=C:\\MyJars\\javax.mail.jar
-file.reference.poi-4.1.0.jar=D:\\JAVA_LIBS\\poi-4.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.poi-4.1.0.jar}:\
     ${file.reference.gembox-spreadsheet.jar}:\
     ${file.reference.gembox-spreadsheet.jar-1}:\
     ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -63,6 +62,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -71,6 +71,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=Progra1POO
 main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
